# PyTorchUltimateMaterial

./: main.py  pyproject.toml
015_NeuralNetworkFromScratch/: dot_product_final.py  dot_product_start.py  nn_scratch_end.py  nn_scratch_start.py  scratch.ipynb
020_TensorIntro/: Tensors.py
030_ModelingIntroduction/: 00_LinRegFromScratch_end.py  00_LinRegFromScratch_start.py  10_LinReg_ModelClass_end.py  10_LinReg_ModelClass_start.py  20_LinReg_Batches_end.py  20_LinReg_Batches_start.py  30_LinReg_DatasetDataloader_end.py  40_LinReg_ModelSavingLoading_end.py  40_LinReg_ModelSavingLoading_start.py  50_LinReg_HyperparameterTuning_end.py  50_LinReg_HyperparameterTuning_start.py
045_Classification/: MultiClassClassification_end.py  MultiClassClassification_start.py  MultilabelClassification_end.py  MultilabelClassification_start.py  multiclass_classification.ipynb  multilabel_classification.ipynb
060_CNN_ImageClassification/: ImagePreprocessing_end.py  ImagePreprocessing_start.py  LayerCalculations_end.py  LayerCalculations_start.py
065_CNN_AudioClassification/: data_prep.py  eda.py  modeling.py  plot_audio.py
070_CNN_ObjectDetection/: ObjectDetection.py
075_ObjectDetection_Yolo7/: yolo_data_prep.py
076_ObjectDetection_Yolo8/: perform_train.py
100_CNN_StyleTransfer/: StyleTransfer_end.py
120_TransferLearning/: TransferLearning_end.py  TransferLearning_start.py  transfer_learning.ipynb
180_LSTM/: Flights_end.py  Flights_start.py  FunctionApproximation_end.py  FunctionApproximation_incl_extrapolation_end.py  FunctionApproximation_start.py  function.ipynb
(+42 files in other folders)
