[project]
name = "pytorchultimatematerial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.2"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "networkx>=3.5",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "requests>=2.28.1",
    "ruff>=0.14.4",
    "scikit-learn>=1.7.2",
    "seaborn",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.uv]
    index-strategy = "unsafe-best-match"

[[tool.uv.index]]
    name = "pytorch"
    url = "https://download.pytorch.org/whl/cpu"
    default = true

[[tool.uv.index]]
    name = "pypi"
    url = "https://pypi.org/simple"
